--- a/Viaxar/app/src/main/AndroidManifest.xml
+++ b/Viaxar/app/src/main/AndroidManifest.xml
@@ -9,22 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".PaisActivity">
+        <activity android:name=".PaisActivity"></activity>
+        <activity android:name=".PaisesActivity" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".CadastroActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PaisesActivity" />
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".CadastroActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity"></activity>
         <activity
             android:name=".MenuActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
