--- a/Viaxar/app/build.gradle
+++ b/Viaxar/app/build.gradle
@@ -35,4 +35,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
+
+    /* Para utilizar a biblioteca Retrofit 2.0 */
+    implementation 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+
+    /* Para utilizar a biblioteca Gson 2.0.0 com a Retrofit 2.0 */
+    implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
 }
