--- a/Viaxar/app/src/main/AndroidManifest.xml
+++ b/Viaxar/app/src/main/AndroidManifest.xml
@@ -34,16 +34,16 @@
         <activity android:name=".ProfileActivity" />
         <activity android:name=".CadastroActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"/>
+        <activity
+            android:name=".MenuActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MenuActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
